# DRFCRUDteams

./: README.md  pyproject.toml
config/: settings.py  urls.py
teams/: models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py
